--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,4 +1,12 @@
 {
+  "semi": false,
   "tabWidth": 4,
-  "semi": false
+  "overrides": [
+      {
+          "files": "*.html",
+          "options": {
+              "tabWidth": 2
+          }
+      }
+  ]
 }
